# advent-of-code-2023

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
data/: 03_test_input.txt
src/aoc/day_01/: __init__.py  test_solution.py
src/aoc/day_02/: __init__.py  test_solution.py
src/aoc/day_03/: __init__.py  test_solution.py
src/aoc/day_04/: __init__.py  test_solution.py
src/aoc/day_05/: __init__.py  test_solution.py
src/aoc/day_06/: __init__.py  test_solution.py
src/aoc/day_07/: __init__.py  test_solution.py
src/aoc/day_08/: __init__.py  test_solution.py
src/aoc/day_09/: __init__.py  test_solution.py
src/aoc/day_11/: __init__.py  test_solution.py
templates/day_template/: __init__.py  test_solution.py
